RESOLVED FIXED319881
NetworkConnectionToWebProcess::takeAllMessagesForPort terminates WebContent on a benign message-port race
https://bugs.webkit.org/show_bug.cgi?id=319881
Summary NetworkConnectionToWebProcess::takeAllMessagesForPort terminates WebContent o...
Chris Dumez
Reported 2026-07-21 00:56:17 PDT
NetworkConnectionToWebProcess::takeAllMessagesForPort terminates WebContent on a benign message-port race
Attachments
Chris Dumez
Comment 1 2026-07-21 00:56:34 PDT
Chris Dumez
Comment 2 2026-07-21 00:58:49 PDT
EWS
Comment 3 2026-07-21 16:16:56 PDT
Committed 317668@main (1c2e7ba25b95): <https://commits.webkit.org/317668@main> Reviewed commits have been landed. Closing PR #69842 and removing active labels.
EWS
Comment 4 2026-07-23 20:00:26 PDT
Committed 316606.226@safari-7625-branch (7f527a49ac62): <https://commits.webkit.org/316606.226@safari-7625-branch> Reviewed commits have been landed. Closing PR #6104 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.